--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,14 @@ services:
       - DB_PASSWORD=${POSTGRES_PASSWORD}
       - DB_NAME=${POSTGRES_DB}
     volumes:
-      - .:/app
+      - .:/app/src
       - go_modules:/go/pkg/mod
+    command: ["./app/microUserAuth"]
 
   db:
     image: postgres
     ports:
-      - "{POSTGRES_PORT}:{POSTGRES_PORT}"
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
